add test for PersonServiceImpl + arrangement